--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,3 @@
 title: "Vanshika's Portfolio"
-description: "Projects, research, and achievements by Vanshika Sachdeva"
-url: "https://vanshika-s12.github.io"
+description: Personal portfolio site.
 theme: minima
-markdown: kramdown
